# apollo

./: .coverage.stans-mbp.kpn.55944.XcyVAMmx  .coveragerc  .dockerignore  .env.default  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.techincal.md  docker-compose.yaml  pre-commit-config.yaml  process_time_log.txt  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  scratch.py  todo.md
.github/workflows/: ci.yaml
docs/: README.execution.md  alpaca.broker.md  backtesting.parameters.md  boilerplates.md  books.md  brokers.orders.md  indicators.combinations.md
docs/TSM_source/TSM_Functions_6E/: EffRatioFreq.txt  TSMADOscillator.txt  TSMAbsVolatility.txt  TSMAccSwingIndex.txt  TSMAdaptiveR2.txt  TSMAdaptiveRSI.txt  TSMAvgMaxRetrace.txt  TSMBlauDblSmoothing.txt  TSMBodyMomentum.txt  TSMBollingerBands.txt  TSMBollingerBandsReturns.txt  TSMCambridgeHook.txt  TSMCompoundGrowth.txt  TSMCurvilinear.txt  TSMCycleChanIndex.txt  TSMDblStochastic.txt  TSMDeMarkRangeHigh.txt  TSMDeMarkRangeLow.txt  TSMDemandIndex.txt  TSMDemandOsc.txt  TSMDoubleMavg.txt  TSMDoubleSmoothing.txt  TSMEfficiencyRatio.txt  TSMElliottWave.txt  TSMElliottWaveOsc.txt  TSMElliottWaveTrend.txt  TSMEquityDropRatio.txt  (+77 more)
parameters/: ARIMATrendMeanReversion.json  AbsolutePriceOscillatorMeanReversion.json  AverageDirectionalMovementIndexMeanReversion.json  BollingerKeltnerChaikinMeanReversion.json  CombinatoryFuturesPatterns.json  DunniganTrendFollowing.json  ElliotWavesMeanReversion.json  KeltnerChaikinMeanReversion.json  KeltnerChaikinTrendFollowing.json  LinearRegressionChannelMeanReversion.json  LinearRegressionForecast.json  LogisticRegressionForecast.json  MovingAverageConvergenceDivergenceMeanReversion.json  OrdinaryLeastSquaresChannelMeanReversion.json  SkewnessKurtosisVolatilityTrendFollowing.json  SupportResistanceTrendFollowing.json  SwingEventsMeanReversion.json  VIXExpansionContractionMeanReversion.json  VIXFuturesConvergenceDivergenceTrendFollowing.json  WildersSwingIndexTrendFollowing.json
parameters_opt/: ARIMATrendMeanReversion.json  AbsolutePriceOscillatorMeanReversion.json  BollingerKeltnerChaikinMeanReversion.json  KeltnerChaikinTrendFollowing.json  LinearRegressionChannelMeanReversion.json  LinearRegressionForecast.json  LogisticRegressionForecast.json  MovingAverageConvergenceDivergenceMeanReversion.json  OrdinaryLeastSquaresChannelMeanReversion.json  SkewnessKurtosisVolatilityMeanReversion.json  SkewnessKurtosisVolatilityTrendFollowing.json  SupportResistanceTrendFollowing.json  SwingEventsMeanReversion.json
prisma/: schema.prisma
scripts/: migrate_test.py
src/: ruff.toml
src/apollo/: settings.py
src/mercury/: settings.py
tests/: conftest.py  ruff.toml
tests/apollo/: conftest.py
tests/data/: test.csv
tests/fixtures/: api_response.py  data_directory_and_file.py  database_client.py  directory_and_file.py  directory_and_files.py  env_and_constants.py  event_emitter.py  external_requests.py  files_and_directories.py  multiprocessing_pool.py  temp_test_data.py  trading_client.py  window_size_and_dataframe.py
tests/integration/: test_influxdb_connector.py  test_postgres_connector.py
tests/mocks/: api_response.py
tests/test_data/: SPY-enhanced.csv  SPY.csv  TestStrategy.json  screened_tickers.csv  sp500-components-page.html  test.csv
tests/utils/: precalculate_shared_values.py
(+681 files in other folders)
