[tool.poetry]
name = "apollo"
version = "0.1.0"
description = "Research & Development of trading strategies"
authors = ["Stan <stanis.konnov@gmail.com>"]
packages = [
  { include = "apollo", from = "src" }
]

# Bump packages to newer versions
# and adapt code to the new API (if needed)

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
jupyter = "^1.0.0"
scipy = "^1.14.0"
plotly = "^5.22.0"
python-dotenv = "^1.0.1"
backtesting = "^0.3.3"
yfinance = "^0.2.37"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
poethepoet = "^0.27.0"
scikit-learn = "^1.5.1"
statsmodels = "^0.14.2"
ruff = "^0.5.0"
pre-commit = "^3.7.1"
influxdb-client = {extras = ["extra"], version = "^1.44.0"}
pytest-dotenv = "^0.5.2"

[tool.poetry.dev-dependencies]

[tool.coverage.run]
omit = [
  "*/__init__.py",
  "*/settings.py",
  "*/commands/*",
  "*/types.py",
  "*/tests/*",
]

[tool.poe.tasks]
test = "pytest -v --cov=src --cov-report term-missing"

optimize = "python3 src/apollo/commands/optimize.py"
backtest = "python3 src/apollo/commands/backtest.py"
experiment = "python3 src/apollo/commands/experiment.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
