[tool.poetry]
name = "apollo"
version = "0.1.0"
description = "Research & Development of trading strategies"
authors = ["Stan <stanis.konnov@gmail.com>"]
packages = [
  { include = "apollo", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
jupyter = "^1.0.0"
scipy = "^1.14.0"
plotly = "^5.22.0"
python-dotenv = "^1.0.1"
backtesting = "^0.3.3"
yfinance = "^0.2.37"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
poethepoet = "^0.27.0"
scikit-learn = "^1.5.1"
statsmodels = "^0.14.2"
ruff = "^0.5.0"
pre-commit = "^3.7.1"
influxdb-client = {extras = ["extra"], version = "^1.44.0"}
pytest-dotenv = "^0.5.2"
freezegun = "^1.5.1"
prisma = "^0.13.1"
pydantic = "^2.8.2"
dotenv-cli = "^3.3.1"
beautifulsoup4 = "^4.12.3"
pandas-market-calendars = "^4.4.2"
timeout-decorator = "^0.5.0"
pyee = "^13.0.0"
alpaca-py = "^0.40.1"

[tool.poetry.dev-dependencies]

[tool.poe.tasks]
migrate = "prisma migrate dev"
migrate_test = "dotenv -e .env.test -- prisma migrate dev"
run_test_suite = "pytest -v --cov=src --cov-report term-missing"

test = ["migrate_test", "run_test_suite"]

backtest = "python3 src/apollo/commands/backtest.py"
optimize = "python3 src/apollo/commands/optimize.py"
generate = "python3 src/apollo/commands/generate.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
