[project]
name = "apollo"
version = "0.1.0"
description = "Research & Development of trading strategies"
authors = [
    { name="Stan", email="stanis.konnov@gmail.com" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.poe.tasks]
migrate = "prisma migrate dev"
migrate_test = "python3 scripts/migrate_test.py"
run_test_suite = "pytest -v --cov=src --cov-report term-missing"

test = ["migrate_test", "run_test_suite"]

runlocal = "python3 src/apollo/commands/runlocal.py"
backtest = "python3 src/apollo/commands/backtest.py"
optimize = "python3 src/apollo/commands/optimize.py"
generate = "python3 src/apollo/commands/generate.py"